# agent-workflow-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_HELPER.md  VERSION.md  common_wrapper.md  pyproject.toml
arms/: A-baseline.WRAPPER_PROVENANCE.md  A-baseline.md  B-matt-pocock.md  (+15 more)
tasks/04-impossible-churn/starter_repo/: .gitignore  README.md  TASK.md  VERIFY.sh  pyproject.toml
tasks/04-impossible-churn/starter_repo/fixtures/: cancellation_events.csv  plan_history.csv
tasks/04-impossible-churn/starter_repo/scripts/: reproduce_churn_bug.py
tasks/04-impossible-churn/starter_repo/src/churncalc/: __init__.py  dashboard_adapter.py  load.py  metrics.py
tasks/04-impossible-churn/starter_repo/tests/: test_existing_metrics.py  test_impossible_churn_bug.py
tasks/05-fake-data-analysis/starter_repo/: README.md  TASK.md  VERIFY.sh  pyproject.toml
tasks/05-fake-data-analysis/starter_repo/data/: campaign_results.csv
tasks/05-fake-data-analysis/starter_repo/scripts/: reproduce_fake_lift.py
tasks/05-fake-data-analysis/starter_repo/src/campaigntrust/: __init__.py  analyze.py
tasks/05-fake-data-analysis/starter_repo/tests/: test_public_contract.py
tasks/06-activation-metric-migration/starter_repo/: README.md  TASK.md  VERIFY.sh  pyproject.toml
tasks/06-activation-metric-migration/starter_repo/docs/: product_activation_v2.md
tasks/06-activation-metric-migration/starter_repo/fixtures/: events.csv  legacy_expected.csv  users.csv
tasks/06-activation-metric-migration/starter_repo/scripts/: generate_fake_activation_data.py  run_activation_report.py
tasks/06-activation-metric-migration/starter_repo/src/activation_metrics/: __init__.py  activation.py  load.py  report.py
tasks/06-activation-metric-migration/starter_repo/tests/: test_public_activation_report.py
tasks/07-dashboard-export-scope-pressure/starter_repo/: README.md  TASK.md  VERIFY.sh  pyproject.toml
tasks/07-dashboard-export-scope-pressure/starter_repo/data/: finance_weekly.csv  noisy_prod_export_sample.csv  ops_daily.csv
tasks/07-dashboard-export-scope-pressure/starter_repo/docs/architecture/: export_framework_roadmap_2022.md
tasks/07-dashboard-export-scope-pressure/starter_repo/docs/examples/: finance_requested_output_sample.csv
tasks/07-dashboard-export-scope-pressure/starter_repo/docs/product_notes/: finance_csv_export_this_week.md
tasks/07-dashboard-export-scope-pressure/starter_repo/src/finboard/: __init__.py  cli.py  registry.py  reports.py
tasks/07-dashboard-export-scope-pressure/starter_repo/src/finboard/attic/: __init__.py  export_registry_spike.py
tasks/07-dashboard-export-scope-pressure/starter_repo/src/finboard/charting/: __init__.py  palette.py  render.py  snapshots.py
tasks/07-dashboard-export-scope-pressure/starter_repo/src/finboard/io/: __init__.py  csv_table.py  json_export.py
tasks/07-dashboard-export-scope-pressure/starter_repo/tests/: test_cli_public.py  test_finance_csv_public.py  test_json_exports.py
(+194 files in other folders)
