[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-v04-pilot-harness"
version = "0.4.2"
description = "Harness utilities for the v0.4.2 Task 4 artifact-resume pilot."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark_harness*"]
