[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-bench"
version = "0.1.0"
description = "A small benchmark for agent skills, verification artifacts, and fresh-session resumability."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark_harness*"]
