[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-bugfix"
version = "0.1.0"
description = "Starter repo for the Impossible Churn Regression benchmark task."
requires-python = ">=3.11"
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
