[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activation-metric-migration"
version = "0.1.0"
description = "Starter repo for the Activation Metric v2 Migration benchmark task."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
